# xpde-picview

./: meson.build  xpde-picview.desktop
DEBIAN/: control
icons/: meson.build
po/: .intltool-merge-cache  LINGUAS  Makefile  Makefile.in  POTFILES
src/: config.h  exif.c  file-dlgs.c  gpicview.c  image-view.c  jpeg-tran.c  main-win.c  meson.build  pref.c
