install_data(
'about.png',
'fullscreen.png',
'print.png',
'slideshow.png',
'delete.png',
'rotate_clockwise.png',
'zoom_in.png',
'edit_in_paint.png',
'next.png',
'rotate_counterclockwise.png',
'zoom_out.png',
'fit_to_size.png',
'previous.png',
'save.png',
install_dir: join_paths(get_option('datadir'), 'xpde', 'xpde-picview')
)
